--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "description": "A set of serializers",
   "type": "library",
   "require": {
-    "php-contrib/serializer": "^1.0"
+    "php-contrib/serializer": "^1.0",
+    "php": ">=8.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^12.2",
@@ -14,13 +15,8 @@
     "squizlabs/php_codesniffer": "^3.13"
   },
   "license": "MIT",
-  "provide": {
-    "php-contrib/serializer": "^1.0"
-  },
-  "config": {
-    "platform": {
-      "php": ">=8.3"
-    }
+  "provides": {
+    "php-contrib/serializer-implementation": "^1.0"
   },
   "scripts": {
     "analyze": "XDEBUG_MODE=off phpstan analyze src --level 9",
